--- a/public/CSS/loginstyles.css
+++ b/public/CSS/loginstyles.css
@@ -34,19 +34,25 @@ h1 {
 	height: 20px;
 	background: white;
 	display: flex;
-	margin: 20px auto;
+	margin: 25px auto;
 	padding: 20px;
 	border: none;
 	outline: none;
 }
 
-.container button{
-    padding: 20px;
-    margin-top: 50px;
-    text-align: center;
-    
+.login_form_form{
+	margin-bottom: 70px;
 }
 
-a {
-	width: 55%;
+button{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor:pointer;
+	width: 71%;
+}
+
+a{
+	color: inherit;
+	text-decoration: none;
 }
