--- a/public/CSS/about.css
+++ b/public/CSS/about.css
@@ -30,6 +30,9 @@ body {
   #aboutUs{
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
     background-color: white;
     margin-top: 60px;
     padding-bottom: 0;
@@ -50,6 +53,7 @@ body {
   }
   
   #aboutUs  > p{
+
     font-size: 10px;
   }
   
